--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
    <link rel="apple-touch-icon" href="%PUBLIC_URL%/car-logo.png" />
+   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 <link rel="icon" href="%PUBLIC_URL%/car-logo.png" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
